# ura-drone-2025

./: .gitignore  README.md
crazyswarm2/src/crazyswarm2/: .gitignore
crazyswarm2/src/crazyswarm2/crazyflie/config/: crazyflies.yaml
crazyswarm2/src/crazyswarm2/crazyflie_examples/crazyflie_examples/: figure8.py
path_gen/: cmspline.py  config.json  requirements.txt  threepoint_trapezoidal.py  twopoint_quintic.py  twopoint_quintic_stretch.py  twopoint_trapezoidal.py
path_gen/tools/: plot_figure8.py  validate_time.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/crazyflie/lib/crazyflie/: aideck_streamer.py  battery  cfmult.py  chooser.py  comCheck  console  crazyflie_server  crazyflie_server.py  downloadUSDLogfile  flash.py  gui.py  listLogVariables  listMemories  listParams  log  reboot  scan  setParam  simple_mapper_multiranger.py  teleop  vel_mux.py  version
ros2_ws/install/crazyflie/share/crazyflie/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/crazyflie_examples/lib/crazyflie_examples/: arming  cmd_full_state  figure8  group_mask  hello_world  infinite_flight  multi_trajectory  nice_hover  set_param  swap
ros2_ws/install/crazyflie_examples/share/crazyflie_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/crazyflie_py/share/crazyflie_py/: package.sh  (+1 more)
ros2_ws/log/: latest_build
ros2_ws/src/crazyflie_test/: package.xml  setup.py
ros2_ws/src/hover_controller/install/: local_setup.sh  setup.sh
ros2_ws/src/hover_controller/log/: latest_build
ros2_ws/src/hover_controller/p2p_controller/: CMakeLists.txt  notes.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/hover_controller/p2p_controller/p2p_controller/: hover_controller.py
ros2_ws/src/hover_controller/p2p_interfaces/: CMakeLists.txt  setup.cfg  setup.py
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
tools/: plot_figure8.py
(+592 files in other folders)
