<?xml version="1.0"?>
<package format="3">
  <name>p2p_controller</name>
  <version>0.0.1</version>
  <description>Point-to-point hover controller for Crazyflie drones</description>
  <maintainer email="s57xiao@uwaterloo.ca">Sam Xiao</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>
  <depend>p2p_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build type -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
